Add phone ratio adjustment

--- a/Clock.css
+++ b/Clock.css
@@ -26,7 +26,8 @@ body{
     padding: 300px 0px;
     text-align: center;
     display:inline-block;
-    margin-left: 9%;
+    margin-left: 3%;
+    margin-right: 3%;
 }
 
 #into {
