--- a/Clock.css
+++ b/Clock.css
@@ -104,7 +104,7 @@ textarea{
     border-radius: 10px;
     width:55%;
     padding:5px 10px;
-    overflow: hidden;
+    word-wrap: break-word;
 }
 
 .divv span{
