--- a/Photography.css
+++ b/Photography.css
@@ -17,11 +17,13 @@ p{
     margin-left:0%;
 }
 .ulbox li{
-    border-radius: 15px;;
-    float:left;
+    border-radius: 15px;
+    display:inline-block;
     width:30%;
-    margin-right: 5%;
-    margin-bottom: 4%;
+    margin-right: 2%;
+    margin-bottom: 2%;
+    padding: 1%;
+
     transition:transform 0.2s ease-in-out;
 }
 
@@ -31,7 +33,8 @@ p{
 }
 
 .ulbox li img {
-    border-radius: 15px;
+    border-radius: 15px;  
+      vertical-align: middle;
 }
 
 
